--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,243 +1,242 @@
 body {
-    max-width: 1080px;
-    min-width: 320px;
-    margin: 0 auto;
-    overflow-x: hidden;
+	max-width: 1080px;
+	min-width: 320px;
+	margin: 0 auto;
+	overflow-x: hidden;
 }
 :root {
-    --bgcolor: #F25424;
+	--bgcolor: #f25424;
 }
 .bg-white {
-    background-color: #fff;
-    border-radius: 1rem;
-    padding: 1rem;
-    margin-bottom: 2rem;
+	background-color: #fff;
+	border-radius: 1rem;
+	padding: 1rem;
+	margin-bottom: 2rem;
 }
 /* 底部导航栏 */
 footer {
-    height: 6rem;
+	height: 6rem;
 }
 .footer {
-    position: fixed;
-    bottom: 0;
-    left:0;
-    width: 100%;
-    height: 6rem;
-    background-color: #fff;
-    border-top: 1px solid #eee;
-
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 6rem;
+	background-color: #fff;
+	border-top: 1px solid #eee;
 }
 .footer-list {
-    max-width: 1080px;
-    height: 6rem;
-    margin: 0 auto;
+	max-width: 1080px;
+	height: 6rem;
+	margin: 0 auto;
 }
 .footer ul {
-    display: flex;
-    align-items: center;
-    height:100%;
-    text-align: center;
+	display: flex;
+	align-items: center;
+	height: 100%;
+	text-align: center;
 }
 .footer ul li {
-    flex: 1;
+	flex: 1;
 }
 .footer li span {
-    display: block;
+	display: block;
 }
 .footer li i {
-    font-size: 2.4rem;
+	font-size: 2.4rem;
 }
 .selected {
-    color:var(--bgcolor)
+	color: var(--bgcolor);
 }
 /* 首页头部 */
 header {
-    height: 5rem;
+	height: 5rem;
 }
 .search {
-    position: fixed;
-    top:0;
-    left:0;
-    width: 100%;
-    background-color: var(--bgcolor);
-    z-index: 99;
-    padding: 1rem 0;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background-color: var(--bgcolor);
+	z-index: 99;
+	padding: 1rem 0;
 }
 .search-list {
-    max-width: 1080px;
-    margin: auto;
-    /* display: flex; */
-    align-items: center;
-    padding: 0 1rem;
-    overflow: hidden;
+	max-width: 1080px;
+	margin: auto;
+	/* display: flex; */
+	align-items: center;
+	padding: 0 1rem;
+	overflow: hidden;
 }
 .search-box {
-    flex: 1;
-    background-color: #fff;
-    border-radius: 2rem;
-    height: 30px;
-    padding: 5px 10px;
-    position: relative;
+	flex: 1;
+	background-color: #fff;
+	border-radius: 2rem;
+	height: 30px;
+	padding: 5px 10px;
+	position: relative;
 }
-.search-box>i {
-    margin-right: 15px;
-    font-weight: 600;
-    color:#9a9a9a;
+.search-box > i {
+	margin-right: 15px;
+	font-weight: 600;
+	color: #9a9a9a;
 }
 .search-box input {
-    border:0;
+	border: 0;
 }
 /* 搜索按钮 */
 .search-box button {
-    background-color:var(--bgcolor);
-    border-radius: 15px;
-    border:0;
-    padding: 4px 15px;
-    position: absolute;
-    right: 3px;
-    top:2px;
-    color: #fff;
-    font-weight: 600;
+	background-color: var(--bgcolor);
+	border-radius: 15px;
+	border: 0;
+	padding: 4px 15px;
+	position: absolute;
+	right: 3px;
+	top: 2px;
+	color: #fff;
+	font-weight: 600;
 }
 .search-sign i {
-    font-size: 2rem;
-    color: #fff;
-    margin-left: 1rem;
+	font-size: 2rem;
+	color: #fff;
+	margin-left: 1rem;
 }
 /* 向上滚动 */
 .search-box ul {
-    position: absolute;
-    left: 40px;
-    top: 10px;
-    animation:scroll 3s infinite;
+	position: absolute;
+	left: 40px;
+	top: 10px;
+	animation: scroll 3s infinite;
 }
 .search-box ul li {
-    height:30px;
-    font-size: 1.2rem;
+	height: 30px;
+	font-size: 1.2rem;
 }
 @keyframes scroll {
-    0% {
-        transform: translateY(0px);
-    }
-    25% {
-        transform: translateY(-30px);
-    }
-    50% {
-        transform: translateY(-60px);
-    }
-    75% {
-        transform: translateY(-90px);
-    }
-    100% {
-        transform: translateY(-120px);
-    }
+	0% {
+		transform: translateY(0px);
+	}
+	25% {
+		transform: translateY(-30px);
+	}
+	50% {
+		transform: translateY(-60px);
+	}
+	75% {
+		transform: translateY(-90px);
+	}
+	100% {
+		transform: translateY(-120px);
+	}
 }
 
 /* 多行导航栏 */
 .navmenu {
-    /* background-color: #999; */
-    width: 100%;
-    overflow-x: auto;
-    white-space: nowrap;
-    min-height: 20rem;
-    position: relative;
-    scroll-snap-type:x mandatory;
+	/* background-color: #999; */
+	width: 100%;
+	overflow-x: auto;
+	white-space: nowrap;
+	min-height: 20rem;
+	position: relative;
+	scroll-snap-type: x mandatory;
 }
 .navmenu::-webkit-scrollbar {
-    display: none;
+	display: none;
 }
 .nav-1,
 .nav-2 {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    scroll-snap-align:start;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	scroll-snap-align: start;
 }
 .nav-1 {
-    left: 0%;
+	left: 0%;
 }
 .nav-2 {
-    left: 100%;
+	left: 100%;
 }
 .navmenu-left {
-    width: 25%;
-    text-align: center;
-    margin-top: 5px;
+	width: 25%;
+	text-align: center;
+	margin-top: 5px;
 }
 .navmenu-left svg {
-    width:3rem;
-    height: 3rem;
+	width: 3rem;
+	height: 3rem;
 }
 .navmenu-left span {
-    display:block;
+	display: block;
 }
 .navmenu .navmenu-left:nth-child(-n + 4) svg {
-    width: 4rem;
-    height: 4rem;
+	width: 4rem;
+	height: 4rem;
 }
 /* 房价行情 */
 .houseprices {
-    padding: 1rem;
+	padding: 1rem;
 }
 .houseprices ul {
-    background-color: #FFF8F8;
-    border-radius: 1rem;
-    display: flex;
-    padding: 2rem 1rem;
-    justify-content: space-between;
+	background-color: #fff8f8;
+	border-radius: 1rem;
+	display: flex;
+	padding: 2rem 1rem;
+	justify-content: space-between;
 }
 .houseprices-state {
-    flex-basis: 30%;
-    text-align: center;
+	flex-basis: 30%;
+	text-align: center;
 }
 .houseprices-state img {
-    width: 80%;
-    height: auto;
+	width: 80%;
+	height: auto;
 }
 .houseprices-increase img {
-    width: 12px;
-    height: 12px;
+	width: 12px;
+	height: 12px;
 }
 .houseprices-price b,
-.houseprices-increase span  {
-    font-size: 2rem;
-    font-weight: 700;
+.houseprices-increase span {
+	font-size: 2rem;
+	font-weight: 700;
 }
 .houseprices-price p,
 .houseprices-increase p {
-    color: #9d9d9d;
+	color: #9d9d9d;
 }
 .houseprices-increase p {
-    margin-left:14px;
+	margin-left: 14px;
 }
 /* 轮播图 */
 .banner {
-    padding: 1rem;
-    position: relative;
+	padding: 1rem;
+	position: relative;
 }
 .banner img {
-    width: 100%;
-    height: auto;
-    border-radius: 1rem;
+	width: 100%;
+	height: auto;
+	border-radius: 1rem;
 }
 .banner ul {
-    display: flex;
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translate(-50%,0);
+	display: flex;
+	position: absolute;
+	bottom: 20px;
+	left: 50%;
+	transform: translate(-50%, 0);
 }
 .banner ul li {
-    background-color: rgba(255, 255, 255,.5);
-    padding: 2px 8px;
-    margin: 0 2px;
-    border-radius: 4px 0 4px 0;
+	background-color: rgba(255, 255, 255, 0.5);
+	padding: 2px 8px;
+	margin: 0 2px;
+	border-radius: 4px 0 4px 0;
 }
 .banner .select {
-    background: var(--bgcolor);
+	background: var(--bgcolor);
 }
 /* 内容展示部分 */
 /* .content ul {
@@ -251,208 +250,221 @@ header {
 } */
 /* 多行布局实现瀑布流 */
 .content {
-    max-width: 1080px;
-    background-color: #E2E3E3;
-    padding: 10px;
+	max-width: 1080px;
+	background-color: #e2e3e3;
+	padding: 10px;
 }
 .content ul {
-    /* 设置列数 */
-    column-count: 2;
-    /* 设置列与列之间的间距 */
-    column-gap:10px;
+	/* 设置列数 */
+	column-count: 2;
+	/* 设置列与列之间的间距 */
+	column-gap: 10px;
 }
 .content ul li {
-    background-color: #fff;
-    border-radius: 10px;
-    margin-bottom: 10px;
-    break-inside: avoid;
+	background-color: #fff;
+	border-radius: 10px;
+	margin-bottom: 10px;
+	break-inside: avoid;
 }
 .content img {
-    width: 100%;
-    height:auto;
-    border-radius: 10px 10px 0 0;
+	width: 100%;
+	height: auto;
+	border-radius: 10px 10px 0 0;
 }
 .content-info {
-    padding: 10px;
+	padding: 10px;
 }
 .content-info h4 {
-    display: -webkit-box;
-    overflow: hidden;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp:2;
-    margin-bottom: 5px;
+	display: -webkit-box;
+	overflow: hidden;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	margin-bottom: 5px;
 }
 .content-info p {
-    font-size: 1rem;
+	font-size: 1rem;
 }
 .content-price span:nth-child(1) {
-    color:var(--bgcolor);
-    font-size: 18px;
-    font-weight: 600;
+	color: var(--bgcolor);
+	font-size: 18px;
+	font-weight: 600;
 }
 .content-price span,
 .content-price sup {
-    color:var(--bgcolor);
+	color: var(--bgcolor);
 }
 .content-info sup {
-    display: inline-block;
-    transform: scale(0.5);
+	display: inline-block;
+	transform: scale(0.5);
 }
 .content-tab span {
-    background-color: #F5F6FA;
-    color:#7B8998;
-    border-radius: 5px;
-    margin-right: 5px;
-    font-size: 12px;
-    padding: 3px;
+	background-color: #f5f6fa;
+	color: #7b8998;
+	border-radius: 5px;
+	margin-right: 5px;
+	font-size: 12px;
+	padding: 3px;
 }
 /* 开屏广告 */
 .page-container {
-    position: relative;
+	position: relative;
 }
 .spread {
-    position:absolute;
-    top:0;
-    left:0;
-    height: 100vh;
-    width: 100%;
-    background:url(@/assets/images/pic1.jpg)no-repeat top center;
-    z-index: 999;
-    background-size:cover;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 100%;
+	background: url(@/assets/images/pic1.jpg) no-repeat top center;
+	z-index: 999;
+	background-size: cover;
 }
 .spread .jump {
-    position: absolute;
-    right: 15px;
-    top: 20px;
+	position: absolute;
+	right: 15px;
+	top: 20px;
 }
 .spread .jump b {
-    padding: 5px;
-    margin-left: 10px;
+	padding: 5px;
+	margin-left: 10px;
+}
+.titleBox {
+	color: white;
+	font-size: 18px;
+	vertical-align: bottom;
+	margin-left: 15px;
+}
+.titleRight {
+	flex: 1;
+	display: contents;
+}
+.titleleft {
+	flex: 1;
+	font-weight: bold;
 }
 /* 发现 */
 .find-hd {
-    height: 50px;
+	height: 50px;
 }
-.fin-hd-item{
-    position: fixed;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 50px;
-    background-color: #fff;
-    box-shadow: 0 0 10px 1px #ddd;
+.fin-hd-item {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 50px;
+	background-color: #fff;
+	box-shadow: 0 0 10px 1px #ddd;
 }
 .fin-hd-item ul {
-    max-width: 1080px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 1rem;
+	max-width: 1080px;
+	height: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 0 1rem;
 }
 .find-body {
-    background-color: #F8F8F8;
-    padding: 1rem;
+	background-color: #f8f8f8;
+	padding: 1rem;
 }
 .find-item-hd {
-    display:flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
 }
 .find-item-hd img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
 }
 .find-item-hd p {
-    font-size: 16px;
-    margin: 0 1rem;
+	font-size: 16px;
+	margin: 0 1rem;
 }
 .find-item-hd span {
-    font-size: 12px;
-    color: var(--bgcolor);
+	font-size: 12px;
+	color: var(--bgcolor);
 }
 .find-item-title {
-    height: 5rem;
-    font-size: 1.6rem;
-    margin: 1rem 0;
+	height: 5rem;
+	font-size: 1.6rem;
+	margin: 1rem 0;
 }
 .find-item-img {
-    display: flex;
+	display: flex;
 }
 .find-item-img img {
-    max-width: 50%;
-    margin:0 5px;
-    overflow: hidden;
+	max-width: 50%;
+	margin: 0 5px;
+	overflow: hidden;
 }
 .find-item-review {
-    text-align: right;
+	text-align: right;
 }
 .find-item-review i {
-    margin: 0 1rem;
-    font-size: 18px;
+	margin: 0 1rem;
+	font-size: 18px;
 }
 /* 我的 */
 /* 背景图像 */
 .my-hd {
-    background:url(../images/bg-1.jpg) no-repeat;
-    width: 100%;
-    height: 14rem;
-    background-size: cover;
-    color: #fff;
+	background: url(../images/bg-1.jpg) no-repeat;
+	width: 100%;
+	height: 14rem;
+	background-size: cover;
+	color: #fff;
 }
 /* 图片 */
 .login-img img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
 }
 .my-hd-icon {
-    text-align: right;
-    padding-top: 3rem;
+	text-align: right;
+	padding-top: 3rem;
 }
-.my-hd-icon i{
-    margin: 0 8px;
-    font-size: 2rem;
+.my-hd-icon i {
+	margin: 0 8px;
+	font-size: 2rem;
 }
 .my-hd-login {
-    display: flex;
-    margin: 2rem;
-    align-items: center;
+	display: flex;
+	margin: 2rem;
+	align-items: center;
 }
 .logn-item {
-    margin-left: 1rem;
+	margin-left: 1rem;
 }
 .logn-item ul {
-    display: flex;
+	display: flex;
 }
 .logn-item ul li a {
-    font-size: 1.6rem;
-    font-weight: 600;
-    color: #fff;
+	font-size: 1.6rem;
+	font-weight: 600;
+	color: #fff;
 }
 .logn-item ul li:not(:last-child)::after {
-    content:'/';
-    margin: 0 5px;
-    font-size: 1.6rem;
+	content: '/';
+	margin: 0 5px;
+	font-size: 1.6rem;
 }
 .logn-item p {
-    font-size: 1.2rem;
-    margin-top: 5px;
+	font-size: 1.2rem;
+	margin-top: 5px;
 }
 .my-body {
-    background-color: #F8F8F8;
-    padding: 1rem;
-
+	background-color: #f8f8f8;
+	padding: 1rem;
 }
 .my-body svg {
-    width: 3rem;
-    height: 3rem;
+	width: 3rem;
+	height: 3rem;
 }
 /* 网格布局 */
 .module ul {
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    text-align: center;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	text-align: center;
 }
 /* 弹性布局 */
 /* .module ul {
@@ -465,133 +477,132 @@ header {
 } */
 /* 登录 */
 .login {
-    max-width: 1080px;
-
+	max-width: 1080px;
 }
 .login-list {
-    height: calc(100vh - 60px);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 2rem;
+	height: calc(100vh - 60px);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 2rem;
 }
 .login-hd h2 {
-    font-size: 2.4rem;
-    margin-top: 2rem;
-    letter-spacing: 2px;
+	font-size: 2.4rem;
+	margin-top: 2rem;
+	letter-spacing: 2px;
 }
-.login-hd>input {
-    width: 100%;
-    border:0;
-    border-bottom: 1px solid #ddd;
-    font-size: 1.8rem;
-    margin-top:2rem;
-    padding-bottom: 8px;
+.login-hd > input {
+	width: 100%;
+	border: 0;
+	border-bottom: 1px solid #ddd;
+	font-size: 1.8rem;
+	margin-top: 2rem;
+	padding-bottom: 8px;
 }
-.login-hd>input::placeholder {
-    color:#ddd;
+.login-hd > input::placeholder {
+	color: #ddd;
 }
 .agreement {
-    font-size: 12px;
-    height: 6rem;
-    display: flex;
-    align-items: center;
+	font-size: 12px;
+	height: 6rem;
+	display: flex;
+	align-items: center;
 }
-.agreement>input {
-    margin-right: 5px;
+.agreement > input {
+	margin-right: 5px;
 }
 .login-hd button {
-    width: 100%;
-    height: 4rem;
-    border: none;
-    background-color:var(--bgcolor);
-    color: #fff;
-    font-weight: 600;
+	width: 100%;
+	height: 4rem;
+	border: none;
+	background-color: var(--bgcolor);
+	color: #fff;
+	font-weight: 600;
 }
 .login-title {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 2rem;
+	display: flex;
+	justify-content: space-between;
+	margin-top: 2rem;
 }
 .login-way {
-    text-align: center;
+	text-align: center;
 }
 .login-way p {
-    color: #999;
-    font-size: 12px;
+	color: #999;
+	font-size: 12px;
 }
 .login-way li {
-    display: inline-block;
-    margin:2rem;
+	display: inline-block;
+	margin: 2rem;
 }
 .login-way li i {
-    border: 1px solid #ddd;
-    border-radius: 50%;
-    padding: 8px;
-    font-size: 2rem;
+	border: 1px solid #ddd;
+	border-radius: 50%;
+	padding: 8px;
+	font-size: 2rem;
 }
 .login-way li p {
-    padding-top: 1rem;
+	padding-top: 1rem;
 }
 /* 消息 */
 .message {
-    padding: 1rem;
+	padding: 1rem;
 }
 .message-wrapper {
-    width: 100%;
-    overflow-x: auto;
-    /* 当内容溢出时，显示滚动条 */
-    white-space: nowrap;
-    scroll-snap-type: x mandatory;
+	width: 100%;
+	overflow-x: auto;
+	/* 当内容溢出时，显示滚动条 */
+	white-space: nowrap;
+	scroll-snap-type: x mandatory;
 }
 .message-wrapper::-webkit-scrollbar {
-    display:none;
+	display: none;
 }
 .message-list {
-    width: 100%;
-    display: inline-block;
-    scroll-snap-align: start;
+	width: 100%;
+	display: inline-block;
+	scroll-snap-align: start;
 }
 .list-item {
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
 }
-.list-img  {
-    width: 5rem;
-    margin-right: 15px;
-    flex-shrink: 0;
+.list-img {
+	width: 5rem;
+	margin-right: 15px;
+	flex-shrink: 0;
 }
 .list-img img {
-    width: 5rem;
-    height: 5rem;
-    border-radius: 50%;
+	width: 5rem;
+	height: 5rem;
+	border-radius: 50%;
 }
 .message-title {
-    width: calc(100vw - 15rem);
-    overflow: hidden;
-    color: #bbb;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    font-size: 1.2rem;
+	width: calc(100vw - 15rem);
+	overflow: hidden;
+	color: #bbb;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	font-size: 1.2rem;
 }
 .list-time {
-    font-size: 1.2rem;
-    margin-right: 1rem;
-    color:#bbb;
+	font-size: 1.2rem;
+	margin-right: 1rem;
+	color: #bbb;
 }
 .button {
-    border:0;
-    color: #fff;
-    padding: 2rem 1.5rem;
-    position: relative;
-    top:-20px;
+	border: 0;
+	color: #fff;
+	padding: 2rem 1.5rem;
+	position: relative;
+	top: -20px;
 }
-[data-type="warning"] {
-    background: #F59B00;
+[data-type='warning'] {
+	background: #f59b00;
 }
-[data-type="danger"] {
-    background:#EB4646;
-    scroll-snap-align: end;
+[data-type='danger'] {
+	background: #eb4646;
+	scroll-snap-align: end;
 }
 .flexColumn {
 	display: flex;
